--- a/src/app/pages/gestao-paciente/paciente/paciente.component.html
+++ b/src/app/pages/gestao-paciente/paciente/paciente.component.html
@@ -86,7 +86,7 @@
                             <button class="btn home-icon pt-4" (click)="visualizar(row)" title="Visualizar dependente">
                               <i class="fa fa-eye"></i>
                             </button>
-                            <button class="btn home-icon pt-4" (click)="precoEspecial(row)" title="Desconto especial">
+                            <button class="btn home-icon pt-4" (click)="precoEspecial(row)" title="Preço exclusivo">
                               <i class="far fa-money-bill-alt"></i>
                             </button>
                             <button class="btn home-icon pt-4" (click)="buscaHistorico(row)" title="Visualizar histórico">
