--- a/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
+++ b/src/app/pages/configurar-agenda/parametrizar-consulta/parametrizar-consulta.component.html
@@ -48,9 +48,10 @@
                   <div class="form-group col-md-5">
                     <div class="form-group pt-4">
                       <div class="text-right">
-                        <button class="btn btn-primary mr-2" (click)="buscarAtendimento(formParametrizarConsulta.value)">
+                        <button class="btn btn-primary mr-2"
+                          (click)="buscarAtendimento(formParametrizarConsulta.value)">
                           BUSCAR
-                        </button>                       
+                        </button>
                       </div>
                     </div>
                   </div>
@@ -96,7 +97,7 @@
                       <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" id="presencial" name="optcheckbox" value="1"
                           (click)="funcValor($event.target.value, $event.target)" />
-                        Atendimento Presencial</label>
+                        Presencial</label>
                     </div>
                   </div>
                   <div class="form-group col-md-2">
@@ -115,8 +116,8 @@
                   </div>
                   <div class="form-group col-md-3">
                     <div class="form-group">
-                      <input type="text" class="form-control ml-lg-n3" id="qrPresencial"
-                        formControlName="qrPresencial" disabled/>
+                      <input type="text" class="form-control ml-lg-n3" id="qrPresencial" formControlName="qrPresencial"
+                        disabled />
                     </div>
                   </div>
                   <div class="col-md-2" *ngIf="isBloqueio">
@@ -140,7 +141,7 @@
                       <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" id="video" name="optcheckbox" value="2"
                           (click)="funcValor($event.target.value, $event.target)" />
-                        Atendimento por Video</label>
+                        Video Chamada</label>
                     </div>
                   </div>
                   <div class="form-group col-md-2">
@@ -159,7 +160,8 @@
                   </div>
                   <div class="form-group col-md-3">
                     <div class="form-group">
-                      <input type="text" class="form-control ml-lg-n3" id="qrVideo" formControlName="qrVideo" disabled/>
+                      <input type="text" class="form-control ml-lg-n3" id="qrVideo" formControlName="qrVideo"
+                        disabled />
                     </div>
                   </div>
                   <div class="col-md-2" *ngIf="isBloqueio">
@@ -183,7 +185,7 @@
                       <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" id="emergencial" name="optcheckbox" value="3"
                           (click)="funcValor($event.target.value, $event.target)" />
-                        Atendimento Emergencial</label>
+                        Emergencial Presencial</label>
                     </div>
                   </div>
                   <div class="form-group col-md-2">
@@ -205,7 +207,7 @@
                   <div class="form-group col-md-3">
                     <div class="form-group">
                       <input type="text" class="form-control ml-lg-n3" id="qrEmergencial"
-                        formControlName="qrEmergencial" disabled/>
+                        formControlName="qrEmergencial" disabled />
                     </div>
                   </div>
                   <div class="col-md-2" *ngIf="isBloqueio">
@@ -229,7 +231,7 @@
                       <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" id="casa" name="optcheckbox" value="4"
                           (click)="funcValor($event.target.value, $event.target)" />
-                        Atendimento em Casa</label>
+                        Em Casa</label>
                     </div>
                   </div>
                   <div class="form-group col-md-2">
@@ -248,7 +250,7 @@
                   </div>
                   <div class="form-group col-md-3">
                     <div class="form-group">
-                      <input type="text" class="form-control ml-lg-n3" id="qrCasa" formControlName="qrCasa" disabled/>
+                      <input type="text" class="form-control ml-lg-n3" id="qrCasa" formControlName="qrCasa" disabled />
                     </div>
                   </div>
                   <div class="col-md-2" *ngIf="isBloqueio">
@@ -261,6 +263,50 @@
                         <label class="radio-inline pl-2">
                           <input class="mat-button" type="radio" id="radio" name="optCasa" value="false"
                             formControlName="optCasa" />
+                          Não</label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-row align-items-center pl-4 mt-lg-n4">
+                  <div class="form-group col-md-3">
+                    <div class="form-group">
+                      <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" id="videoChamada" name="optcheckbox" value="5"
+                          (click)="funcValor($event.target.value, $event.target)" />
+                        Video Chamada Emergencial
+                      </label>
+                    </div>
+                  </div>
+                  <div class="form-group col-md-2">
+                    <div class="form-group">
+                      <input type="number" min="0" max="60" class="form-control ml-lg-n3" id="tempoVideoChamada"
+                        formControlName="tempoVideoChamada" />
+                    </div>
+                  </div>
+                  <div class="form-group col-md-2">
+                    <div class="form-group">
+                      <input class="div-videoChamada" autocomplete="off" currencyMask
+                        [options]="{prefix: 'R$ ' , thousands: '.', decimal: ','}" type="text"
+                        class="form-control m-lg-n3" name="valorVideoChamada" id="valorVideoChamada" formControlName="valorVideoChamada"
+                        placeholder="R$ 0,00">
+                    </div>
+                  </div>
+                  <div class="form-group col-md-3">
+                    <div class="form-group">
+                      <input type="text" class="form-control ml-lg-n3" id="qrVideoChamada" formControlName="qrVideoChamada" disabled/>
+                    </div>
+                  </div>
+                  <div class="col-md-2" *ngIf="isBloqueio">
+                    <div class="form-group">
+                      <div class="pb-2 row">
+                        <label class="radio-inline pl-3">
+                          <input class="mat-button" type="radio" id="radio" name="optVideoChamada" value="true"
+                            formControlName="optVideoChamada" />
+                          Sim</label>
+                        <label class="radio-inline pl-2">
+                          <input class="mat-button" type="radio" id="radio" name="optVideoChamada" value="false"
+                            formControlName="optVideoChamada" />
                           Não</label>
                       </div>
                     </div>
