--- a/src/app/pages/configurar-clinica/associar-medico/associar-medico.component.html
+++ b/src/app/pages/configurar-clinica/associar-medico/associar-medico.component.html
@@ -47,7 +47,7 @@
                         <ngx-datatable-column name="Foto" prop="avatar">
                           <ng-template ngx-datatable-cell-template let-row="row">
                             <div class="text-center">
-                              <img src="{{row.avatar}}" style="height: 80px;">
+                              <img src="{{row.avatar}}" style="height:55px; border-radius:50%;">
                             </div>
                           </ng-template>
                         </ngx-datatable-column>
